// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Radio Card matches snapshot (Checked, Desktop) 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  color: #FFFFFF;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0;
  position: relative;
  width: var(--size-1x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:checked {
  background-image: url('data:image/svg+xml;utf8,%0A%20%20%20%20%20%20%20%20%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ccircle%20cx%3D%228%22%20cy%3D%228%22%20r%3D%224%22%20fill%3D%22%23006296%22%2F%3E%0A%20%20%20%20%20%20%20%20%3C%2Fsvg%3E');
  background-position: center;
  background-repeat: no-repeat;
  border: 2px solid #006296;
}

.c4:disabled + label {
  color: #B7BBC2;
}

.c4:hover:checked:not(:disabled) {
  border: 1px solid #000000;
}

.c4:hover:not(:checked) {
  border: 1px solid #000000;
}

.c1 {
  font-size: 0.75rem;
  margin-bottom: var(--spacing-1x);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-1x);
}

.c8:empty {
  margin: 0;
}

.c3 {
  background-color: #E0F0F9;
  border: 1px solid #006296;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-2x);
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c3:hover {
  background-color: #DBDEE1;
  border-color: #000000;
  color: #000000;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c0 .c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c5 {
  margin-top: var(--spacing-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <label
    class="c2 c3"
    data-testid="radio-card-test-label"
    for="uuid1"
  >
    <input
      checked=""
      class="c4 c5"
      data-testid="radiobutton-uuid1"
      id="uuid1"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c6"
    >
      <span
        class="c7"
      >
        Test
      </span>
      <span
        class="c8"
        id="description-uuid1"
      >
        Test description
      </span>
    </span>
  </label>
</fieldset>
`;

exports[`Radio Card matches snapshot (Default, Desktop) 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  color: #FFFFFF;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0;
  position: relative;
  width: var(--size-1x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:checked {
  background-image: url('data:image/svg+xml;utf8,%0A%20%20%20%20%20%20%20%20%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ccircle%20cx%3D%228%22%20cy%3D%228%22%20r%3D%224%22%20fill%3D%22%23006296%22%2F%3E%0A%20%20%20%20%20%20%20%20%3C%2Fsvg%3E');
  background-position: center;
  background-repeat: no-repeat;
  border: 2px solid #006296;
}

.c4:disabled + label {
  color: #B7BBC2;
}

.c4:hover:checked:not(:disabled) {
  border: 1px solid #000000;
}

.c4:hover:not(:checked) {
  border: 1px solid #000000;
}

.c1 {
  font-size: 0.75rem;
  margin-bottom: var(--spacing-1x);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-1x);
}

.c8:empty {
  margin: 0;
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-2x);
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c3:hover {
  background-color: #DBDEE1;
  border-color: #000000;
  color: #000000;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c0 .c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c5 {
  margin-top: var(--spacing-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <label
    class="c2 c3"
    data-testid="radio-card-test-label"
    for="uuid1"
  >
    <input
      class="c4 c5"
      data-testid="radiobutton-uuid1"
      id="uuid1"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c6"
    >
      <span
        class="c7"
      >
        Test
      </span>
      <span
        class="c8"
        id="description-uuid1"
      >
        Test description
      </span>
    </span>
  </label>
</fieldset>
`;

exports[`Radio Card matches snapshot (Default, Mobile) 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  color: #FFFFFF;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0;
  position: relative;
  width: var(--size-1x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:checked {
  background-image: url('data:image/svg+xml;utf8,%0A%20%20%20%20%20%20%20%20%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ccircle%20cx%3D%228%22%20cy%3D%228%22%20r%3D%224%22%20fill%3D%22%23006296%22%2F%3E%0A%20%20%20%20%20%20%20%20%3C%2Fsvg%3E');
  background-position: center;
  background-repeat: no-repeat;
  border: 2px solid #006296;
}

.c4:disabled + label {
  color: #B7BBC2;
}

.c4:hover:checked:not(:disabled) {
  border: 1px solid #000000;
}

.c4:hover:not(:checked) {
  border: 1px solid #000000;
}

.c1 {
  font-size: 0.875rem;
  margin-bottom: var(--spacing-1x);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c8 {
  font-size: 1rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-1x);
}

.c8:empty {
  margin: 0;
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-2x);
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c3:hover {
  background-color: #DBDEE1;
  border-color: #000000;
  color: #000000;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c0 .c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c5 {
  margin-top: var(--spacing-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <label
    class="c2 c3"
    data-testid="radio-card-test-label"
    for="uuid1"
  >
    <input
      class="c4 c5"
      data-testid="radiobutton-uuid1"
      id="uuid1"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c6"
    >
      <span
        class="c7"
      >
        Test
      </span>
      <span
        class="c8"
        id="description-uuid1"
      >
        Test description
      </span>
    </span>
  </label>
</fieldset>
`;

exports[`Radio Card matches snapshot (Disabled, Desktop) 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #F1F2F2;
  border: 1px solid #B7BBC2;
  border-radius: 50%;
  color: #F1F2F2;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0;
  position: relative;
  width: var(--size-1x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:checked {
  background-image: url('data:image/svg+xml;utf8,%0A%20%20%20%20%20%20%20%20%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ccircle%20cx%3D%228%22%20cy%3D%228%22%20r%3D%224%22%20fill%3D%22%23B7BBC2%22%2F%3E%0A%20%20%20%20%20%20%20%20%3C%2Fsvg%3E');
  background-position: center;
  background-repeat: no-repeat;
  border: 2px solid #B7BBC2;
}

.c4:disabled + label {
  color: #B7BBC2;
}

.c4:hover:checked:not(:disabled) {
  border: 1px solid #000000;
}

.c4:hover:not(:checked) {
  border: 1px solid #B7BBC2;
}

.c1 {
  font-size: 0.75rem;
  margin-bottom: var(--spacing-1x);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-1x);
}

.c8:empty {
  margin: 0;
}

.c3 {
  background-color: #F1F2F2;
  border: 1px solid #B7BBC2;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-2x);
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c3:hover {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c0 .c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c5 {
  margin-top: var(--spacing-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <label
    class="c2 c3"
    data-testid="radio-card-test-label"
    for="uuid1"
  >
    <input
      class="c4 c5"
      data-testid="radiobutton-uuid1"
      disabled=""
      id="uuid1"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c6"
    >
      <span
        class="c7"
      >
        Test
      </span>
      <span
        class="c8"
        id="description-uuid1"
      >
        Test description
      </span>
    </span>
  </label>
</fieldset>
`;

exports[`Radio Card matches snapshot (Label, Desktop) 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  color: #FFFFFF;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0;
  position: relative;
  width: var(--size-1x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:checked {
  background-image: url('data:image/svg+xml;utf8,%0A%20%20%20%20%20%20%20%20%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ccircle%20cx%3D%228%22%20cy%3D%228%22%20r%3D%224%22%20fill%3D%22%23006296%22%2F%3E%0A%20%20%20%20%20%20%20%20%3C%2Fsvg%3E');
  background-position: center;
  background-repeat: no-repeat;
  border: 2px solid #006296;
}

.c4:disabled + label {
  color: #B7BBC2;
}

.c4:hover:checked:not(:disabled) {
  border: 1px solid #000000;
}

.c4:hover:not(:checked) {
  border: 1px solid #000000;
}

.c1 {
  font-size: 0.75rem;
  margin-bottom: var(--spacing-1x);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-1x);
}

.c8:empty {
  margin: 0;
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-2x);
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c3:hover {
  background-color: #DBDEE1;
  border-color: #000000;
  color: #000000;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c0 .c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c5 {
  margin-top: var(--spacing-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  >
    Test
  </legend>
  <label
    class="c2 c3"
    data-testid="radio-card-test-label"
    for="uuid1"
  >
    <input
      class="c4 c5"
      data-testid="radiobutton-uuid1"
      id="uuid1"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c6"
    >
      <span
        class="c7"
      >
        Test
      </span>
      <span
        class="c8"
        id="description-uuid1"
      >
        Test description
      </span>
    </span>
  </label>
</fieldset>
`;

exports[`Radio Card matches snapshot (Label, Mobile) 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  color: #FFFFFF;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0;
  position: relative;
  width: var(--size-1x);
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4:checked {
  background-image: url('data:image/svg+xml;utf8,%0A%20%20%20%20%20%20%20%20%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Ccircle%20cx%3D%228%22%20cy%3D%228%22%20r%3D%224%22%20fill%3D%22%23006296%22%2F%3E%0A%20%20%20%20%20%20%20%20%3C%2Fsvg%3E');
  background-position: center;
  background-repeat: no-repeat;
  border: 2px solid #006296;
}

.c4:disabled + label {
  color: #B7BBC2;
}

.c4:hover:checked:not(:disabled) {
  border: 1px solid #000000;
}

.c4:hover:not(:checked) {
  border: 1px solid #000000;
}

.c1 {
  font-size: 0.875rem;
  margin-bottom: var(--spacing-1x);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c8 {
  font-size: 1rem;
  line-height: 1.25rem;
  margin-top: var(--spacing-1x);
}

.c8:empty {
  margin: 0;
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-2x);
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c3:hover {
  background-color: #DBDEE1;
  border-color: #000000;
  color: #000000;
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c0 .c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c5 {
  margin-top: var(--spacing-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  >
    Test
  </legend>
  <label
    class="c2 c3"
    data-testid="radio-card-test-label"
    for="uuid1"
  >
    <input
      class="c4 c5"
      data-testid="radiobutton-uuid1"
      id="uuid1"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c6"
    >
      <span
        class="c7"
      >
        Test
      </span>
      <span
        class="c8"
        id="description-uuid1"
      >
        Test description
      </span>
    </span>
  </label>
</fieldset>
`;
